[gd_scene load_steps=7 format=3 uid="uid://u0iuimiyr3n7"]

[ext_resource type="Script" uid="uid://debbr12t1nhx" path="res://Winner/script/winner.gd" id="1_fbkvs"]
[ext_resource type="Texture2D" uid="uid://bdkflho6se5w2" path="res://Assets/Backgroundsolo.png" id="2_sjpgl"]
[ext_resource type="Texture2D" uid="uid://b4gmdj0o54dbi" path="res://Assets/winner.png" id="4_sv7lj"]
[ext_resource type="Theme" uid="uid://b36653tr1evm2" path="res://fonts/font_theme_pixelart.tres" id="5_jq4lq"]
[ext_resource type="Texture2D" uid="uid://ck0di8jafuas1" path="res://Assets/backhome.png" id="6_3nvai"]
[ext_resource type="FontFile" uid="uid://c0j0wuwy0g446" path="res://fonts/ThaleahFat.ttf" id="6_ywjft"]

[node name="Winner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fbkvs")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sjpgl")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
z_index = 3
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -224.0
offset_right = 150.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerImg" type="TextureRect" parent="TextureRect/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect/PlayerImg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -450.0
offset_right = 500.0
offset_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_sv7lj")
expand_mode = 1

[node name="LabelWinner" type="Label" parent="TextureRect/TextureRect/PlayerImg/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.5
offset_top = -280.0
offset_right = 395.5
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jq4lq")
theme_override_fonts/font = ExtResource("6_ywjft")
theme_override_font_sizes/font_size = 104
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTime" type="Label" parent="TextureRect/TextureRect/PlayerImg/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 150.0
offset_right = 75.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jq4lq")
theme_override_fonts/font = ExtResource("6_ywjft")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -210.0
offset_right = -256.0
offset_bottom = -146.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
texture_normal = ExtResource("6_3nvai")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
